# rectpack2D

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml  thoughts.md
.cache/clangd/index/: best_bin_finder.h.689F20CF83C71F81.idx  empty_space_allocators.h.576709854A35A9A2.idx  empty_spaces.h.C4C89E4A4941F791.idx  finders_interface.h.A5C2EAE5F356CBE9.idx  insert_and_split.h.5B60DEAA16CBC2F3.idx  main.cpp.E40E915ADE234AD0.idx  rect_structs.h.E1CE3347348425DD.idx
.github/workflows/: cmake-multi-platform.yml
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  best_bin_finder.h  empty_space_allocators.h  empty_space_tree.h  empty_space_vector.h  empty_spaces.h  finders_interface.h  insert_and_split.h  pack.cpp  pack.h  pack_structs.h  rect_structs.h
src/rectpack2D/: best_bin_finder.h  empty_space_allocators.h  empty_spaces.h  finders_interface.h  rect_structs.h
test/: example.cpp
tests/: example_expected_output.txt
